# packages/server/src/api/v1/components/auth/controller.ts
@@ -1,8 +1,10 @@
-import { Get, Route, Controller, Post } from "tsoa";
+import { Get, Route, Controller, Post, Body, Request } from "tsoa";
 import { Document } from "mongoose";
+import { Request as ExpressRequest } from "express";
 
-import { IUser, IUserAuth } from "interfaces/IUser";
+import { IUser, IUserAuth } from "../../../../interfaces/IUser";
 import { AuthService } from "services/auth";
+import Logger from "loaders/logger";
 
 @Route("/auth")
 export class AuthController extends Controller {
@@ -14,25 +16,26 @@ export class AuthController extends Controller {
   }
 
   @Post("/signup")
-  public async signUp(authData: {
-    email: string;
-    password: string;
-  }): Promise<IUserAuth> {
+  public async signUp(
+    @Body() authData: { email: string; password: string }
+  ): Promise<IUserAuth> {
     const response = await this.authServiceInstance.signUp(authData);
     return response;
   }
 
   @Post("/signin")
-  public async signIn(authData: {
-    email: string;
-    password: string;
-  }): Promise<IUserAuth> {
+  public async signIn(
+    @Body() authData: { email: string; password: string }
+  ): Promise<IUserAuth> {
     const response = await this.authServiceInstance.signIn(authData);
     return response;
   }
 
   @Get("/me")
-  public async me(user: IUser & Document, token: string): Promise<IUserAuth> {
+  public async me(@Request() req: ExpressRequest): Promise<IUserAuth> {
+    const user = req.user as IUser & Document;
+    const token = (req.headers.authorization as string).slice(7);
+
     return {
       user: {
         id: user._id,
@@ -41,5 +44,12 @@ export class AuthController extends Controller {
       },
       token
     };
+  }
+
+  public async logout(@Request() req: ExpressRequest): Promise<void> {
+    Logger.silly(
+      `User logout (clear session). User id: ${(req.user as IUser)._id}`
+    );
+    req.logOut();
   }
 }
