# packages/server/src/api/v1/components/items/index.ts
@@ -1,6 +1,7 @@
 import { Router, Request, Response, NextFunction } from "express";
 
 import { ItemsController } from "./controller";
+import { withAuth } from "middlewares/auth";
 
 const route = Router();
 
@@ -12,16 +13,10 @@ route.get("/", async (req: Request, res: Response, next: NextFunction) => {
     const response = await controller.getAll(
       parseInt(page as string),
       parseInt(limit as string),
-      {
-        maxPrice: req.query?.maxPrice
-          ? parseInt(req.query.maxPrice as string)
-          : undefined,
-        minPrice: req.query?.minPrice
-          ? parseInt(req.query.minPrice as string)
-          : undefined,
-        inStock: req.query?.inStock === "true",
-        search: req.query?.search as string
-      }
+      req.query?.maxPrice ? parseInt(req.query.maxPrice as string) : undefined,
+      req.query?.minPrice ? parseInt(req.query.minPrice as string) : undefined,
+      req.query?.inStock === "true",
+      req.query?.search as string
     );
     res.status(200).json(response);
   } catch (e) {
@@ -39,28 +34,37 @@ route.get("/:id", async (req: Request, res: Response, next: NextFunction) => {
   }
 });
 
-route.post("/", async (req: Request, res: Response, next: NextFunction) => {
-  const controller = new ItemsController();
-  try {
-    const response = await controller.create(req.body);
-    res.status(201).json(response);
-  } catch (e) {
-    next(e);
+route.post(
+  "/",
+  withAuth({ unconfirmedEmail: true }),
+  async (req: Request, res: Response, next: NextFunction) => {
+    const controller = new ItemsController();
+    try {
+      const response = await controller.create(req.body);
+      res.status(201).json(response);
+    } catch (e) {
+      next(e);
+    }
   }
-});
+);
 
-route.put("/:id", async (req: Request, res: Response, next: NextFunction) => {
-  const controller = new ItemsController();
-  try {
-    const response = await controller.update(req.params.id, req.body);
-    res.status(202).json(response);
-  } catch (e) {
-    next(e);
+route.put(
+  "/:id",
+  withAuth({ unconfirmedEmail: true }),
+  async (req: Request, res: Response, next: NextFunction) => {
+    const controller = new ItemsController();
+    try {
+      const response = await controller.update(req.params.id, req.body);
+      res.status(202).json(response);
+    } catch (e) {
+      next(e);
+    }
   }
-});
+);
 
 route.delete(
   "/:id",
+  withAuth({ unconfirmedEmail: true }),
   async (req: Request, res: Response, next: NextFunction) => {
     const controller = new ItemsController();
     try {
